--- a/.github/workflows/njhchat.yml
+++ b/.github/workflows/njhchat.yml
@@ -1,14 +1,14 @@
 on: push
 jobs:
   build:
-    name: Build
+    name: generate_exe
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
     - name: install_dependencies
       run: |
         python -m pip install -r requirements.txt
-    - name: build
+    - name: generate_exe
       run: |
         pyinstaller -F -w client.py
         pyinstaller -F -w server.py
